@@ -1,3 +1,8 @@
+2001-12-09  Alex Graveley  <alex@ximian.com>
+
+	* src/libsoup/soup-uri.c (normalize_path): Add path normalization
+	code from libxml.
+
 2001-11-13  Joe Shaw  <joe@ximian.com>
 
 	* configure.in, src/libsoup/soup-private.h: Version 0.5.5.
